# agents-list

./: .env  .gitignore  2025-08-09-caveat-the-messages-below-were-generated-by-the-u.txt  AGENCY_MONETIZATION_PROPOSAL.md  AGENT_TRAINING_FRAMEWORK.md  ALIGNMENT_SUMMARY.md  API_IMPROVEMENT_PLAN.md  AUTHENTICATION_IMPLEMENTATION.md  CHANGELOG.md  COMMIT_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_V2_PLAN.md  Dockerfile  GEMINI.md  MONETIZATION_STRATEGY.md  MONETIZATION_STRATEGY_ANALYSIS.md  PR_DESCRIPTION.md  README.md  TEST_PLAN.md  add_tool_restrictions.py  api-documenter.md  apply_tool_restrictions.py  backend-architect.md  business-analyst.md  c-pro.md  context-manager.md  customer-support.md  data-engineer.md  database-admin.md  database-optimizer.md  devops-troubleshooter.md  dx-optimizer.md  elixir-pro.md  frontend-developer.md  golang-pro.md  ios-developer.md  legacy-modernizer.md  mermaid-expert.md  minecraft-bukkit-pro.md  network-engineer.md  (+14 more)
.github/: README.md
.github/workflows/: ci.yml
agents/: README.md  ai-engineer.md  api-documenter.md  architect-reviewer.md  business-analyst.md  cloud-architect.md  code-reviewer.md  content-marketer.md  cpp-pro.md  csharp-pro.md  data-scientist.md  deployment-engineer.md  devops-troubleshooter.md  docs-architect.md  documentation-linter.md  error-detective.md  frontend-developer.md  graphql-architect.md  incident-responder.md  java-pro.md  javascript-pro.md  legal-advisor.md  ml-engineer.md  mlops-engineer.md  mobile-developer.md  payment-integration.md  performance-engineer.md  project-scaffolder.md  python-pro.md  reference-builder.md  scala-pro.md  search-specialist.md  security-auditor.md  terraform-specialist.md  test-automator.md  test-generator.md  typescript-pro.md
deployment/: DEPLOYMENT_SUMMARY.md
deployment/ci-cd/: deploy-scripts.sh  github-workflows-main.yml  github-workflows-security.yml
deployment/docker/: .env.example  Dockerfile.analytics  Dockerfile.backend  Dockerfile.cli  Dockerfile.frontend  (+5 more)
docs/: ADVANCED_FEATURES.md  AGENT_GUIDE.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  USER_MANUAL.md  WEB_UI_GUIDE.md
history/: CHANGELOG.md  README.md  RELEASE_NOTES_v2.0.0.md
integrations/: ENTERPRISE_INTEGRATION_ARCHITECTURE.md  github-integration.py  slack-integration.py  telegram_integration.py
internal/: CLAUDE_PLAN.md  GEMINI.md  MARK_AS_COMPLETED_PLAN.md  README.md
our-crm-ai/: ANALYTICS_README.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.production  Dockerfile.simple  ONBOARDING_PROMPT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_README.md  PRODUCTION_SUMMARY.md  README.md  SECURITY_CHECKLIST.md  agent_integration_framework.py  agent_routing.py  agent_selector.py  agent_selector_enhanced.py  agent_training_framework.py  ai_crm.db  ai_project_manager.py  analytics_api.py  analytics_engine.py  api.py  api_client.py  api_docs.py  auth.py  auth_database.py  auth_routes.py  backlog_analyzer.py  billing_api.py  business_analytics.db  business_analytics_cli.py  business_intelligence_dashboard.py  business_pm_gateway.py  cli.py  cli_modern.py  commands.py  config.json  config_enhanced.json  config_manager.py  crm.py  (+56 more)
our-crm-ai/.github/workflows/: ci-cd.yml
our-crm-ai/agents/: pm_agent.py
our-crm-ai/ai_crm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
our-crm-ai/backups/pre_deploy_20250815_184134/: database.sql
our-crm-ai/backups/pre_deploy_20250815_185739/: database.sql
our-crm-ai/crm/: __init__.py  setup.py
our-crm-ai/database/: init.sql  schema.sql
our-crm-ai/docs/: README.md
our-crm-ai/docs/api/: MCP.md  authentication.md
our-crm-ai/docs/architecture/: AI_INTEGRATION_GUIDE.md  AI_PROJECT_MANAGER_GUIDE.md  PM_GATEWAY_GUIDE.md
our-crm-ai/docs/deployment/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_PHASE2A.md  DOCKER_SETUP_GUIDE.md
our-crm-ai/docs/guides/: QUICKSTART.md  USER_GUIDE.md
our-crm-ai/docs/reports/: COMMIT_MESSAGES.md  DEV_SETUP_VERIFICATION.md  PRODUCTION_TEST_REPORT.md  UV_SYNC_FIX_SUMMARY.md
our-crm-ai/frontend/: package-lock.json  package.json  tailwind.config.js
our-crm-ai/frontend/public/: index.html
our-crm-ai/frontend/src/: App.tsx  index.css  index.tsx
our-crm-ai/frontend/src/components/: AgentChat.tsx  AgentDashboard.tsx  AnalyticsDashboard.tsx  BillingDashboard.tsx  Dashboard.tsx  Layout.tsx  LoginForm.tsx  ProtectedRoute.tsx  TaskManager.tsx
our-crm-ai/frontend/src/contexts/: AgentContext.tsx  AuthContext.tsx
our-crm-ai/frontend/src/hooks/: useRealTimeUpdates.ts
our-crm-ai/frontend/src/services/: ApiService.ts  AuthService.ts  WebSocketService.ts  api.ts
our-crm-ai/frontend/src/types/: User.ts
our-crm-ai/monitoring/: prometheus.yml
our-crm-ai/nginx/: nginx.conf  nginx.phase2a.conf
our-crm-ai/nginx/ssl/: cert.pem  key.pem
our-crm-ai/rag/: prepare_rag.py  query_rag.py  rag_system.py
our-crm-ai/scripts/: backup.sh  deploy-phase2a.sh  deploy.sh  docker-init.py
our-crm-ai/tasks/: 01-technical-refinement.md
our-crm-ai/terraform/: README.md  main.tf
our-crm-ai/terraform/environments/: production.tfvars  staging.tfvars
our-crm-ai/workflow_storage/: 5ea40d86-8d6c-47a8-bbe6-d54ea052235d.json  d182c59f-a029-4580-8718-dbced7397cce.json
our_crm_ai/: .env.production.example  ANALYTICS_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  README_REFACTORED.md  agent_routing.py  agent_training_framework.py  analytics_engine.py  config.json  config_enhanced.json  config_manager.py  crm_setup_enhanced.py  docker-compose.prod.yml  exceptions.py  models.py  performance_optimizer.py  pm_agent_gateway.py  requirements.txt  setup_training_framework.py  test_suite.py  test_yougile_integration.py  yougile_integration_test_report.json
planning/: MONETIZATION_STRATEGY.md  PHASE_2A_ROADMAP.md  README.md
scripts/: add_tool_restrictions.py  validate_agents.py
specs/: README.md
tests/: __init__.py  run_all_tests.py  test_agent_selector.py  test_analytics_engine.py  test_crm_enhanced.py  test_integration.py  test_validation.py
web-ui/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  start-dev.sh
(+63 files in other folders)
